--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@
 :root {
   /* colors */
   --background-color: white;
+  --background-black-color: black;
   --light-color: #f8f8f8;
   --dark-color: #505050;
   --text-color: #131313;
